--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -10,6 +10,10 @@
 \usepackage{amsmath}
 \usepackage{mathtools}
 \graphicspath{ {images/} }
+\usepackage{array}
+\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
 %Tot això hauria d'anar en un pkg, però no sé com és fa
 \newcommand*{\assignatura}[1]{\gdef\1assignatura{#1}}
@@ -118,9 +122,11 @@ Per tot el que hem comentat en el paràgraf anterior, creiem que el Delay slot, 
 \section{Annex}
 
 %TODO vull centrar la taula pero no puc.
+
 \begin{table}[!h]
-\centering
+\hskip-2.0cm
 \begin{tabular}{|c|c|c|c|c|}
+
 \hline
  & Sense opcions de millora &Forwarding  &Delay Slot  &Forwarding + Delay Slot   \\
  \hline
